# Incrementa

./: .gitignore  CMakeLists.txt  cards.yaml
.github/workflows/: windows-build.yml
src/: main.cpp
